--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,60 @@
-/* TODO: Add CSS Global Rules */
+:root {
+  --primary-950: #0c0c0e;
+  --primary-900: #1a1a1e;
+  --primary-800: #323239;
+  --primary-700: #4c4c57;
+  --primary-600: #666675;
+  --primary-500: #818192;
+  --primary-400: #9d9daa;
+  --primary-300: #bbbbc4;
+  --primary-200: #d1d1d7;
+  --primary-100: #e9e9ec;
+  --primary-50: #f4f4f6;
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+.content-grid {
+  --padding-inline: 2rem;
+  --content-max-width: 120ch;
+  --breakout-max-width: 140ch;
+
+  --breakout-size: calc(
+    (var(--breakout-max-width) - var(--content-max-width)) / 2
+  );
+
+  display: grid;
+  grid-template-columns:
+    [full-width-start] minmax(var(--padding-inline), 1fr)
+    [brakeout-start] minmax(0, var(--breakout-size))
+    [content-start] min(
+      100% - (var(--padding-inline) * 2),
+      var(--content-max-width)
+    )
+    [content-end]
+    minmax(0, var(--breakout-size)) [brakekout-end]
+    minmax(var(--padding-inline), 1fr) [full-width-end];
+}
+
+.content-grid > :not(.breakout, .full-width),
+.full-width > :not(.breakout, .full-width) {
+  grid-column: content;
+}
+
+.content-grid > .breakout {
+  grid-column: brakeout;
+}
+
+.content-grid > .full-width {
+  grid-column: full-width;
+
+  display: grid;
+  grid-template-columns: inherit;
+}
+
+img {
+  width: 100%;
+}
