--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,9 @@
   padding: 0px;
 }
 
-/* Hi */
+.bg-primary {
+  background-color: var(--primary-800);
+}
 
 .content-grid {
   --padding-inline: 2rem;
@@ -31,13 +33,13 @@
   display: grid;
   grid-template-columns:
     [full-width-start] minmax(var(--padding-inline), 1fr)
-    [brakeout-start] minmax(0, var(--breakout-size))
+    [breakout-start] minmax(0, var(--breakout-size))
     [content-start] min(
       100% - (var(--padding-inline) * 2),
       var(--content-max-width)
     )
     [content-end]
-    minmax(0, var(--breakout-size)) [brakekout-end]
+    minmax(0, var(--breakout-size)) [breakout-end]
     minmax(var(--padding-inline), 1fr) [full-width-end];
 }
 
@@ -47,7 +49,7 @@
 }
 
 .content-grid > .breakout {
-  grid-column: brakeout;
+  grid-column: breakout;
 }
 
 .content-grid > .full-width {
@@ -59,4 +61,6 @@
 
 img {
   width: 100%;
+  max-height: 60vh;
+  object-fit: cover;
 }
