--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,24 @@
+/* Instantiate Font Files */
+@font-face {
+  font-family: 'Lora';
+  src: url('./fonts/Lora-VariableFont_wght.ttf') format('truetype-variations');
+  font-weight: 1 999;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('./fonts/Montserrat-VariableFont_wght.ttf')
+    format('truetype-variations');
+  font-weight: 1 999;
+}
+
+@font-face {
+  font-family: 'Oooh Baby';
+  src: url('./fonts/OoohBaby-Regular.ttf');
+  font-weight: 400;
+}
+
+/* Set Up Variables to be Used Across Application */
 :root {
   --primary-950: #0c0c0e;
   --primary-900: #1a1a1e;
@@ -12,6 +33,32 @@
   --primary-50: #f4f4f6;
 }
 
+/* Default Text Setup */
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Lora';
+  font-weight: 525;
+  width: clamp(30ch, 100%, 60ch);
+  color: var(--primary-900);
+}
+
+p,
+blockquote,
+a {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  width: clamp(30ch, 100%, 75ch);
+  color: var(--primary-900);
+}
+
+li {
+  font-family: 'Montserrat';
+  font-weight: 400;
+}
+
+/* Removes Default Spacing */
 * {
   margin: 0px;
   padding: 0px;
@@ -21,6 +68,7 @@
   background-color: var(--primary-800);
 }
 
+/* Grid System for Page Layout */
 .content-grid {
   --padding-inline: 2rem;
   --content-max-width: 120ch;
@@ -63,4 +111,9 @@ img {
   width: 100%;
   max-height: 60vh;
   object-fit: cover;
+}
+
+video {
+  width: 100%;
+  max-height: 60vh;
 }
