--- a/src/app/components/navigation/navigation.module.css
+++ b/src/app/components/navigation/navigation.module.css
@@ -4,7 +4,11 @@
 
   /* font-family: 'Montserrat'; */
   font-size: 1.25rem;
+}
+
+.navigation li a {
   color: var(--primary-50);
+  text-decoration: none;
 }
 
 .navigation {
@@ -17,7 +21,7 @@
   grid-column-start: 2;
 }
 
-.navigation li:nth-child(3) {
+.navigation li:nth-child(3) a {
   font-family: 'Lora';
   font-size: 1.5rem;
 }
