--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,8 +48,9 @@ h3,
 h4 {
   font-family: 'Lora';
   font-weight: 525;
-  width: clamp(30ch, 100%, 60ch);
+  width: clamp(20ch, 100%, 60ch);
   color: var(--primary-900);
+  line-height: 130%;
 }
 
 p,
@@ -59,6 +60,7 @@ a {
   font-weight: 400;
   width: clamp(30ch, 100%, 75ch);
   color: var(--primary-900);
+  line-height: 150%;
 }
 
 li {
@@ -141,5 +143,4 @@ video {
 .primary-button:active {
   background-color: var(--primary-500);
   color: var(--primary-900);
-  font-weight: 500;
 }
