--- a/src/app/components/navigation/navigation.module.css
+++ b/src/app/components/navigation/navigation.module.css
@@ -32,7 +32,7 @@
   align-content: center;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width = 1000px) {
   .navigation {
     grid-template-columns: 1fr auto 1fr;
   }
