--- a/src/app/components/navigation/navigation.module.css
+++ b/src/app/components/navigation/navigation.module.css
@@ -61,4 +61,9 @@
   .navigation > li:nth-child(6) {
     display: none;
   }
+
+  .navigation {
+    width: 75%;
+    background: var(--primary-700);
+  }
 }
