--- a/src/app/components/navigation/navigation.module.css
+++ b/src/app/components/navigation/navigation.module.css
@@ -55,17 +55,48 @@
 @media screen and (max-width: 1000px) {
   .navigation {
     grid-template-columns: 1fr auto 1fr;
+    translate: -100%;
+    opacity: 0%;
   }
 
   .navigation li {
     display: none;
   }
 
-  .navigation > li:nth-child(5) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 1/2;
-    justify-self: start;
+  .navigation > li:nth-child(1) {
+    grid-column-start: 1;
+  }
+
+  .container:has(input:checked) {
+    .navigation {
+      transition: translate var(--nav-animation-timing) opacity
+        var(--nav-animation-timing);
+      translate: calc(0% + 2rem);
+      opacity: 100%;
+      padding: 0.5rem 1rem;
+      padding-top: 4rem;
+      background-color: var(--primary-800);
+      color: var(--primary-50);
+      min-height: 100vh;
+      width: 12rem;
+
+      position: absolute;
+      right: 0px;
+      top: 0px;
+
+      display: flex;
+      flex-direction: column;
+    }
+
+    .navigation li {
+      display: block;
+      text-align: left;
+
+      z-index: 3;
+      font-size: 1.5rem;
+
+      margin-bottom: 1rem;
+    }
   }
 }
 
