--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -119,7 +119,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 4px);
   background-color: var(--primary-800-opacity-40);
 }
 
