--- a/src/app/components/polaroid-image/polaroidimage.module.css
+++ b/src/app/components/polaroid-image/polaroidimage.module.css
@@ -1,7 +1,7 @@
 .polaroidImage {
   padding: 20px;
-  width: 200px;
-  height: 220px;
+  aspect-ratio: 11/10;
+  width: clamp(140px, (100% - 40px), 300px);
   background-color: var(--page-background);
   box-shadow: 0px 5px 10px var(--primary-300);
 }
@@ -15,6 +15,7 @@
   font-family: 'Oooh Baby';
   width: 100%;
   text-align: center;
+  font-size: 1.5rem;
   padding: 12px 0px 16px 0px;
 }
 
