--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,15 @@
   --primary-800-opacity-40: rgba(50, 50, 57, 0.4);
 
   --nav-animation-timing: 200ms ease-in-out;
+
+  --padding-inline: 2rem;
+  --content-max-width: 120ch;
+  --content-min-width: calc(100% - (var(--padding-inline) * 2));
+  --breakout-max-width: 140ch;
+
+  --breakout-size: calc(
+    (var(--breakout-max-width) - var(--content-max-width)) / 2
+  );
 }
 
 /* Removes Default Spacing */
@@ -43,22 +52,11 @@
 
 /* Grid System for Page Layout */
 .content-grid {
-  --padding-inline: 2rem;
-  --content-max-width: 120ch;
-  --breakout-max-width: 140ch;
-
-  --breakout-size: calc(
-    (var(--breakout-max-width) - var(--content-max-width)) / 2
-  );
-
   display: grid;
   grid-template-columns:
     [full-width-start] minmax(var(--padding-inline), 1fr)
     [breakout-start] minmax(0, var(--breakout-size))
-    [content-start] min(
-      100% - (var(--padding-inline) * 2),
-      var(--content-max-width)
-    )
+    [content-start] min(var(--content-min-width), var(--content-max-width))
     [content-end]
     minmax(0, var(--breakout-size)) [breakout-end]
     minmax(var(--padding-inline), 1fr) [full-width-end];
