--- a/src/app/components/navigation/navigation.module.css
+++ b/src/app/components/navigation/navigation.module.css
@@ -1,9 +1,9 @@
 .container {
-  position: relative;
+  position: sticky;
   --brand-name-length: 224px;
   padding: var(--spacing-s) 0px;
 
-  min-height: 32px;
+  min-height: 64px;
 }
 
 .navigation li {
