--- a/src/app/components/polaroid-image/polaroidimage.module.css
+++ b/src/app/components/polaroid-image/polaroidimage.module.css
@@ -1,12 +1,16 @@
 .polaroidImage {
+  display: flex;
+  flex-direction: column;
+
   padding: 20px;
-  aspect-ratio: 11/10;
-  width: clamp(140px, (100% - 40px), 300px);
+  aspect-ratio: 10/11;
+  height: 300px;
   background-color: var(--page-background);
   box-shadow: 0px 5px 10px var(--primary-300);
 }
 
 .polaroidImage img {
+  width: 100%;
   height: calc(100% - 40px);
   object-fit: cover;
 }
