portfolio section fix and about hero fix

--- a/src/app/components/decorative-image/decorativetext.module.css
+++ b/src/app/components/decorative-image/decorativetext.module.css
@@ -27,9 +27,19 @@
   z-index: 1;
   width: fit-content;
   margin-inline: 5% 0;
-  padding-inline: 12px;
+  padding-inline: 0.4rem;
   background: var(--page-background);
 
   font-family: 'Oooh Baby';
   font-size: 1.5rem;
+}
+
+.hideText {
+  display: none;
+}
+
+.decorativeImage:has(.hideText) figcaption {
+  &::before {
+    display: none;
+  }
 }
