--- a/src/app/components/portfolio-couple/portfolioCouple.module.css
+++ b/src/app/components/portfolio-couple/portfolioCouple.module.css
@@ -30,7 +30,8 @@
 
 .portfolioCouple .services {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(auto-fill, 100px);
+  gap: 0.2rem;
 }
 
 .portfolioCouple .serviceImage img {
@@ -43,4 +44,25 @@
 
 .portfolioCouple button {
   font-size: large;
+}
+
+@media (max-width: 840px) {
+  .portfolioCouple {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .portfolioCouple .textContent {
+    grid-column: span 2;
+    grid-row: 2;
+  }
+
+  .portfolioCouple .coupleImage {
+    grid-column: span 2;
+    grid-row: 1;
+  }
+
+  .portfolioCouple .serviceImage {
+    grid-row: auto;
+    grid-column: span 1;
+  }
 }
