--- a/src/app/globals.container.css
+++ b/src/app/globals.container.css
@@ -3,6 +3,23 @@
   grid-template-columns: 1fr;
   gap: var(--spacing-l);
   margin-bottom: var(--spacing-l);
+  align-items: center;
+}
+
+.image-text-section h1 {
+  text-wrap: pretty;
+  line-height: 140%;
+}
+
+.image-text-section.logo-section {
+  max-width: 700px;
+  justify-self: center;
+  gap: 1rem;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.image-text-section.logo-section .text-container {
+  grid-column: 2/5;
 }
 
 .text-container {
